# security-summary

./: .gitignore  README.md  ROUTINE_PROMPT.md  pyproject.toml
config/: personas.yaml  podcast.yaml  ranking.yaml  sources.yaml
docs/: feed.xml  index.html
src/: collect.py  dedup.py  deliver.py  email_client.py  featured.py  normalize.py  persona.py  podcast_feed.py  tts.py
src/collectors/: __init__.py  bluesky.py  cisa.py  hackernews.py  mastodon.py  nvd.py  reddit.py  rss.py  youtube.py
state/: featured.jsonl  inbox.json  seen.jsonl
state/runs/2026-05-22/: script.txt  summary.md
state/runs/2026-05-24/: script.txt  summary.md
state/runs/2026-05-25/: script.txt  summary.md
state/runs/2026-05-26/: script.txt  summary.md
state/runs/2026-05-27/: script.txt  summary.md
state/runs/2026-05-28/: script.txt  summary.md
state/runs/2026-05-29/: script.txt  summary.md
state/runs/2026-06-01/: script.txt  summary.md
tests/: test_dedup.py  test_email_client.py  test_featured.py  test_normalize.py  test_persona.py  test_podcast_feed.py  test_tts.py
