[project]
name = "security-summary"
version = "0.1.0"
description = "Nightly OSINT cybersecurity digest delivered via email + audio."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "praw>=7.7",
    "atproto>=0.0.55",
    "pyyaml>=6.0",
    "rapidfuzz>=3.9",
    "markdown-it-py>=3.0",
    "openai>=1.40",
    "resend>=2.0",
    "python-dateutil>=2.9",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
